thesis touch up based on Prof. John's review

--- a/1introduction.tex
+++ b/1introduction.tex
@@ -103,13 +103,12 @@ To tackle this research problem, the following are some research questions which
 The objectives of this thesis can be divided into two main interdependent parts. As a whole, the entire work aims to adopt and leverage on existing frameworks to design a feasible object-level \textbf{semantic extraction} and \textbf{retrieval} framework and techniques for \textbf{car park videos}. 
 With the goal of answering the aforementioned research questions, the following are the two objectives of this research:
 
-\begin{enumerate}
+\begin{enumerate}[start=1,label={(\bfseries O\arabic*):}]
 %\item To adopt and leverage existing video data representation, semantics extraction and retrieval methods to design a surveillance video semantics extraction and retrieval framework.
   \item To identify and extract \textit{suitable object-level semantics} which are easily interpretable and reasonably accurate in describing car park surveillance events.
   \item To design \textit{video retrieval techniques} that can take in intuitive user-described queries to provide fast and highly relevant retrieval results.
 \end{enumerate}
-
-These objectives are properly validated through both quantitative measures and user studies.  
+\noindent These objectives are properly validated through both quantitative measures and user studies.  
 
 \subsection{Scope and Definition}
 \label{subsec:scope}
