--- a/6conclusion.tex
+++ b/6conclusion.tex
@@ -11,7 +11,7 @@ The goal of this thesis is to present a preemptive solution towards such inciden
 While there has been plenty of existing works in surveillance setting, only a handful of these work revolves around a car park scenario. 
 And among the existing literature that focuses on a car park scenario, a majority of them tend to only focus on the availability of parking spots. 
 Chapter \ref{section:litreview} provides an overview and critique of recent approaches to extract object semantics such as vehicle colour and motion along with relevant works involving retrieval engines. As a whole, the chapter suggests a considerable room for improvement and research in the field of computer vision for car park surveillance data.
-Specifically, this thesis addresses two main objectives: (1) Identify and extract suitable object semantics that can be easily interpretable while accurately describing scenarios in the car park, and (2) Retrieve video footages using a video retrieval engine that takes in user-described queries. 
+Specifically, this thesis addresses two main objectives: (O1) Identify and extract suitable object semantics that can be easily interpretable while accurately describing scenarios in the car park, and (O2) Retrieve video footages using a video retrieval engine that takes in user-described queries. 
 
 In view of the advantages offered by segmentation of video data, the framework used in this work segmented the input video data into a spatio-temporal cube (\textit{atoms}) structure inspired by \cite{castanon2016retrieval}. These \textit{atoms} were then used to describe specific locations in a 3D space where the extracted vehicle colours and motions occurred in both the \versionOneExt and \versionTwoExt modules. This segmentation process also allowed end users to describe trajectories in the form of drawings upon the search canvas intuitively. Both of the applied methods in this work has obvious advantages and disadvantages: While the \versionOneRet method was able to accurately pinpoint locations in which an extracted semantic was found, the overall recall rate was significantly lower as the user had to provide exact queries to retrieve a desired shot. This high accuracy \& low recall rate is useful when the exact query needs to be matched 100\%. On the other hand, the \versionTwoRet was able to retrieve a wider range of results, at the cost of a lower accuracy rate. The retrieval engine here is proven to be more robust even when the input query was not provided accurately. 
 
