--- a/llt.bib
+++ b/llt.bib
@@ -461,9 +461,9 @@ year={2013},
 url={https://cnx.org/contents/FPtK1zmh@6.27:s3XqfSLV@4/Sensory-Perception}}
 
 
-@misc{nixsensorltd, title={Nix Mini Color Sensor | The perfect tool for paint color matching}, url={https://www.nixsensor.com/nix-mini/}, journal={Nix Sensor Ltd}}
+@misc{nixsensorltd, title={Nix Mini Color Sensor | The perfect tool for paint color matching}, year={2018}, url={https://www.nixsensor.com/nix-mini/},  journal={Nix Sensor Ltd}}
 
-@misc{adafruit, title={Adafruit TCS34725 RGB Sensor}, url={https://www.adafruit.com/product/1334}, journal={Adafruit}}
+@misc{adafruit, title={Adafruit TCS34725 RGB Sensor}, year={2013}, url={https://www.adafruit.com/product/1334}, journal={Adafruit}}
 
 @article{munroe2010color,
   title={Color survey results},
@@ -841,4 +841,15 @@ journal={Colour metric: https://www.compuphase.com/cmetric.htm},   year={2018}}
   booktitle={Proceedings of the thirtieth annual ACM symposium on Theory of computing},
   pages={604--613},
   year={1998}
+}
+
+@article{everingham2010pascal,
+  title={The pascal visual object classes (voc) challenge},
+  author={Everingham, Mark and Van Gool, Luc and Williams, Christopher KI and Winn, John and Zisserman, Andrew},
+  journal={International journal of computer vision},
+  volume={88},
+  number={2},
+  pages={303--338},
+  year={2010},
+  publisher={Springer}
 }
