--- a/5retrieval-module.tex
+++ b/5retrieval-module.tex
@@ -12,7 +12,7 @@ of events alone are insufficient for effective retrieval process.
 With vehicle-specific semantics such as vehicle trajectory, time-stamp
 information, and colour information extracted via the extraction module
 introduced in Chapter~\ref{section:semanticsextraction},
-this chapter hone in on the second objective [02] of designing video retrieval
+this chapter hone in on the second objective [O2] of designing video retrieval
 techniques that takes in intuitive user-described queries to provide fast
 and accurate results.
 
@@ -30,7 +30,7 @@ Subsequently, the methods used to measure the difference between the
 user-described trajectory, vehicle colour classifying methods, scoring systems
 along with the results based on multiple users' review of the proposed method
 is discussed.
-As described in the Experimental Methodology (see~\ref{sec:expmethodology}),
+As described in the Experimental Methodology (see Section~\ref{sec:expmethodology}),
 both the vehicle trajectory and vehicle colour evaluation process were
 separated in order to better gauge the performance of each technique.
 This chapter also includes the retrieval speed of the second retrieval engine.
@@ -65,18 +65,19 @@ Figure~\ref{fig:motionExample} with the trajectory marked with \textcircled{2}.
 In the example, a red vehicle was detected frame 180 to 184 of a video file on
 the 19th of March 2016 at 8:51:00am until 8:51:05am, from atom location (3, 15)
 to (5, 17) but was detected as a pink vehicle at frame 181.
-The time information from frame $\mathbb{T}$ can be deduced using
-$\mathbb{T}_{time}  = (\mathbb{VD} \times \frac{\mathbb{T}}{\mathbb{TF}}) + \mathbb{F}_{time}$
-where $\mathbb{VD}$ corresponds to the video duration of each file (6 minutes)
-and $\mathbb{TF}$ is the total frames of the current video. The
-$\mathbb{F}_{time}$ is the time information extracted from filename. Hence, the
+The time information from frame $\mathbb{T}$ can be deduced using Equation \ref{eq:timecount}.
+%$\mathbb{T}_{time}  = (\mathbb{VD} \times \frac{\mathbb{T}}{\mathbb{TF}}) + \mathbb{F}_{time}$
+%where $\mathbb{VD}$ corresponds to the video duration of each file (6 minutes)
+%and $\mathbb{TF}$ is the total frames of the current video. The
+%$\mathbb{F}_{time}$ is the time information extracted from filename. 
+Hence, the
 current frame time at frame 181 is obtained as such:
 $(6_{minutes} \times \frac{181}{360}) + 08:48:00am = 8:51:01am$.
 
 As each catalogued event is treated as a unique document (a single record in
 the database) in this framework, the retrieval process begins by filtering out
 tables which are irrelevant to the query, $\mathbb{Q}$. Falling back on the
-example given in Table~\ref{table:dbSample}, the system is able to effectively
+example given in Table~\ref{table:dbSample}, the retrieval engine is able to effectively
 skip through 9 colour tables and 5 motion tables, hence speeding up the process
 of locating documents of interest while reducing the overhead cost involved
 when going through an entire database. Upon filtering out irrelevant tables,
@@ -124,7 +125,7 @@ retrieval engine where the final results can be viewed.
 \begin{table}[!hbt]
 	\centering
   \caption{Database Structure for a Vehicle Identified as Red and Pink Colour
-  with Object id "1" of the \versionOneRet }
+  with Object id ``1'' of the \versionOneRet}
   \label{table:dbSample}
   \begin{tabular}{llllll}
   \multicolumn{6}{l}{{ colour\_red}} \\ \hline
@@ -194,13 +195,13 @@ both $TQ1$ and $TQ2$.
 Precision and Recall (Equation \ref{eq:precisionrecall}) metrics were used to
 measure the performance of the proposed method. These values can be calculated
 as the total number of event occurrence for 2 days were fully annotated.
-Likewise, as the $F_1$ score is a harmonic mean between Precision and Recall,
+Likewise, as the $F_1$-Score is a harmonic mean between Precision and Recall,
 this value can also be computed (Equation \ref{eq:f1score}). The precision of a
 retrieval engine can be thought as the ratio between number of accurate results
 over the total number of retrieved results. The recall, on the hand, indicates
 the ratio of relevant results which were retrieved over the total retrieved
 results. As both Precision and Recall values are desirable in a retrieval
-engine, the $F_1$ score is used to judge how well the retrieval engine performs
+engine, the $F_1$-Score is used to judge how well the retrieval engine performs
 in these two aspects.
 
 \begin{align}
@@ -264,15 +265,14 @@ for TQ1 and 68.15\% to 51.85\% for TQ2. The results shows consistency
 throughout the various experimental settings and true towards the concept which
 was introduced in \ref{versionOneConcept}.
 
-To judge the overall performance of the retrieval engine as a whole, the $F_1$
-score metric was used as it provides a harmonic mean between both of the
+To judge the overall performance of the retrieval engine as a whole, the $F_1$-Score metric was used as it provides a harmonic mean between both of the
 desirable metrics discussed above. Based on the results, queries with the lowest
 CV and lower number of inputs tend to perform better than the other parameter
 settings.
 This is because the additional number of input increases the chance of lowering
 the CV score; likewise, a lower CV value relaxes the need to match more atom
 inputs.
-The proposed method was able to achieve an $F_1$ score of 74.32\% and 68.08\%
+The proposed method was able to achieve an $F_1$-Score of 74.32\% and 68.08\%
 for both TQ1 and TQ2.
 Based on the results obtained from these experiments, the performance of the
 proposed method was far from optimal. Drastic changes are inevitable if
@@ -335,7 +335,7 @@ The results of the proposed colour term extraction algorithm
 correctly predicted with the highest count, while cells in red refers to the
 highest count of incorrect predictions. Overall, the performance in terms of
 precision is recorded around 54\% while the recall rate is reported in the
-region of approximately 36\% with the $F_1$ score at 39\%.
+region of approximately 36\% with the $F_1$-Score at 39\%.
 The tabulated results also shows roughly 11\% of vehicles were wrongly
 classified as achromatic vehicles which were affected by the proposed
 $T_{pivot}$ value. However, when setting aside the performance of the algorithm
@@ -350,7 +350,7 @@ three achromatic colours was analysed. The proposed algorithm performed
 relatively well with an average accuracy of 68\%. The results shows that the
 proposed algorithm aced differentiating black and white vehicles, however, the
 proposed method had difficulty classifying between gray-black and gray-white
-vehicles as these data are ambiguous, highly depending on the lighting
+vehicles as these data are ambiguous, and highly depending on the lighting
 condition in the video data.
 As mentioned above, the $T_{pivot}$'s performance was underwhelming. Pivoting
 between chromatic and achromatic vehicles proves to be inefficient in harsh
@@ -415,7 +415,7 @@ retrieval engine while improving on the overall results. To enable
 cross-platform access to the retrieval engine without additional compilation
 or build commands, the JavaScript (JS) language was selected as it is commonly
 used in web browsers.
-The focus of this work sees a shift from indexing methods to results-sorting
+The focus of this thesis sees a shift from indexing methods to results-sorting
 optimisation by measuring the difference between the query and the retrieved
 results. The concept and scoring systems used in this retrieval engine will be
 discussed further in the following subsections along with the evaluation.
@@ -426,13 +426,15 @@ In contrast to the proposed method in \versionOneRet, each spatio-temporal atom
 cubes were no longer treated as a unique document. Instead, the unique
 identifiers ($atom_x$, $atom_y$, $atom_t$) of each atom was used to build a
 set of points in the retrieval process. As mentioned above, the focus of this
-framework veered towards the use of distance measures (see Section
-\ref{section:distancemeasures}) and its applications in order to retrieve
+framework veered towards the use of distance measures 
+%(see Section~\ref{section:distancemeasures}) 
+and its applications in order to retrieve
 relevant results.
 
 Similar to the semantic extraction process, the graphical input query makes use
-of the atom cubes' unique identifiers with the exception of the $atom_t$. As a
-replacement to the time identifier, the order of the input, $o_{i}$, was used.
+of the atom cubes' unique identifiers with the exception of the $atom_t$. 
+%As a replacement to the time identifier
+Instead of using the actual time data, only the order of the input, $o_{i}$, was used.
 The series of orders is able to effectively mimic the motion of the target
 vehicle. First, the graphical query input was converted into a set
 $\mathbb{Q}$, of unique identifiers by removing duplicate identifiers which
@@ -484,8 +486,7 @@ D_{Chamfer} (P,Q) = \frac{1}{\mid P \mid} \sum_{t_p \in P} \min_{t_q \in Q}  \mi
 
 \subsection{Search Interface}
 The proposed retrieval engine interface was designed using web compliant
-graphical user interface in JavaScript as illustrated in
-\ref{fig:versionTwoInterface}.
+graphical user interface in JavaScript as illustrated in Figure~\ref{fig:versionTwoInterface}.
 Similar to the concept introduced in the \versionOneRet, users are able to
 construct queries by drawing the trajectory while providing complementary
 information such as the vehicle colour and timestamp information.
@@ -504,7 +505,7 @@ as there was no need of encoding each retrieved shot on the fly.
 \end{figure}
 
 \subsection{Metrics, Scoring System and Experimental Methodology}
-
+\ref{sec:retrieval-metrics}
 The following subsections describes the scoring system, metrics as well as the
 evaluation process of the proposed method described in Section
 \ref{section:versionTwo}. With the main objective of providing users with
@@ -528,12 +529,12 @@ both the trajectory and colour terms were separated. The separation of
 evaluations allows further understanding on how to improve the retrieval engine
 as a whole. The evaluation process took on a user study approach.
 First, a group of volunteers was introduced to the retrieval engine along with
-it's features and a sample use case was demonstrated. Next, the volunteers were
-given full control to draw any query they were interested in. They were then
+it's features, then a sample use case was demonstrated. Next, the volunteers were
+given full control over the user interface and were allowed to draw any query they were interested in. They were then
 tasked to provide feedback by rating each result with a scale of 1 to 5, with
 5 being a result that closely resembles the input query.
 
-The volunteers were given full control of drawing the input query $\mathbb{P}$
+The volunteer full control of drawing the input query $\mathbb{P}$
 to mimic a real world scenario. As there were no limitation on what could be
 drawn on the search canvas, it was not feasible obtaining the ground truth
 annotation for each and every possible motion within the one month data time
@@ -634,7 +635,7 @@ $\Delta Colour_{LUV}$ & $=$ &$\sqrt{(2 + \frac{\mean{r}}{256}) \times \Delta R^{
 HSV &
 \begin{tabular}{lcl}
 \\
-\multicolumn{3}{c}{(As introduced in Section \ref{section:versionOneColorExtract})}
+% \multicolumn{3}{c}{(As introduced in Section \ref{section:versionOneColorExtract})}
 \\
 
 $\Delta{Hue}$ & $=$ & $\min\{ \mid GT_{hue} - Colour_{hue} \mid,  180^{\circ} - \mid GT_{hue} - Colour_{hue} \mid  \}$ \\
@@ -707,12 +708,10 @@ the retrieval engine was measured using \textit{Precision@K} along with the
   \label{fig:versionTwoTrajquery}
 \end{figure}
 
-Even though the errors from the tracker\cite{lim2017} cascaded into database,
-results due to tracker error was not removed to provide a broad idea of the
-retrieval engine's performance when working with trackers which are currently
-available. First, the \textit{Precision@K} of the retrieval engine was measured
-and recorded, Figure \ref{fig:versionTwoPreAtK} contains the plot of the
-average \textit{Precision@K} result. The result shows that the retrieval engine
+Even though the errors from the tracker~\cite{lim2017} cascaded into database, results due to tracker error was not removed to provide a broad idea of the retrieval engine's performance when working with trackers which are currently available. 
+First, the \textit{Precision@K} of the retrieval engine was measured
+and recorded in Figure \ref{fig:versionTwoPreAtK} where the 
+average \textit{Precision@K} result were plotted. The result shows that the retrieval engine
 managed to retrieve video shots which were relatively relevant to the user's
 query with an average precision of 76\% with a steady decline in its precision
 as the K (number of results) increases. This was an expected outcome as it is
